added logo and meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="NeighborHoodShare revolutionizes local file sharing with secure P2P communication. Connect with your neighbors securely and effortlessly share files with NeighborHoodShare, strengthening community networks." />
+		<meta name="keywords" content="NeighborHoodShare, local file sharing, neighborhood connectivity, peer-to-peer communication, secure file sharing" />
+		<meta name="author" content="Dikshant Rajput" />
+		<meta property="og:title" content="NeighborHoodShare: Ditch the Cloud, Share Nearby" />
+		<meta property="og:description" content="Connect with your neighbors securely and effortlessly share files and messages with NeighborHoodShare." />
+		<meta property="og:image" content="%sveltekit.assets%/logo.png" />
+		<meta property="og:url" content="https://neighbor-share.vercel.app/" />
+		<title>NeighborHoodShare: Ditch the Cloud, Share Nearby.</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
